--- a/style.css
+++ b/style.css
@@ -3,3 +3,81 @@ Header background - #FFDBAA
 button - #805215
 Header Text - #553100
 Main background - #D4A76A*/
+
+header {
+    background-color: #FFDBAA;
+    height: 200px;
+    font-size: 50px;
+    color: #553100;
+    margin-bottom: 20px;
+}
+
+.top {
+    display: flex;
+    justify-content: space-between;
+    background-color: #FFDBAA;
+    margin-bottom: 40px;
+}
+
+.flights {
+    background-color: white;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    font-size: large;
+}
+
+.group {
+    background-color: white;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    font-size: large;
+}
+
+.discount {
+    background-color: white;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    font-size: large;
+}
+
+.para {
+    color: white;
+    background-color: #553100;
+    width: 300px;
+    padding: 20px;
+    margin: 20px;
+    font-size: xx-large;
+    text-align: center;
+}
+
+
+nav {
+    float: right;
+}
+
+body {
+    background-color: #D4A76A;
+}
+
+
+
+.mains {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.about {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+}
+
