--- a/style.css
+++ b/style.css
@@ -10,13 +10,23 @@ header {
     font-size: 50px;
     color: #553100;
     margin-bottom: 20px;
+    padding: 0;
+    margin: 0;
+}
+
+nav {
+    float: right;
+    text-decoration: none;
 }
 
 .top {
     display: flex;
-    justify-content: space-between;
-    background-color: #FFDBAA;
+    justify-content: space-evenly;
+    color: white;
+    background-color: #553100;
     margin-bottom: 40px;
+    margin-top: 10px;
+
 }
 
 .flights {
@@ -49,6 +59,18 @@ header {
     font-size: large;
 }
 
+.about {
+    background-color: white;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    font-size: large;
+    margin: 40px;
+    
+}
+
 .para {
     color: white;
     background-color: #553100;
@@ -59,25 +81,12 @@ header {
     text-align: center;
 }
 
-
-nav {
-    float: right;
-}
-
 body {
     background-color: #D4A76A;
+    margin: 0;
 }
-
-
 
 .mains {
     display: flex;
     justify-content: space-evenly;
 }
-
-.about {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-}
-
